--- a/Server/templates/index.html
+++ b/Server/templates/index.html
@@ -100,34 +100,61 @@
 	</table>
 	</div>
 	<div id='genre'>
-		<table class="table2" border=2 align="center" height="50">
+		<table class="table2" border=2 align="center" height="50" width="1200">
 		<tr><td>
-				<form method="post" action="/send/change-genre/SF" style="display: inline">
-						<input type="submit" value="SF" class="buttonE">
+				<form method="post" action="/send/change-genre/28" style="display: inline">
+						<input type="submit" value="アクション" class="buttonE2">
 				</form>
-				<form method="post" action="/send/change-genre/action" style="display: inline">
-						<input type="submit" value="アクション" class="buttonE">
+        <form method="post" action="/send/change-genre/12" style="display: inline">
+						<input type="submit" value="アドベンチャー" class="buttonE2">
 				</form>
-				<form method="post" action="/send/change-genre/horror" style="display: inline">
-						<input type="submit" value="ホラー" class="buttonE">
+        <form method="post" action="/send/change-genre/16" style="display: inline">
+						<input type="submit" value="アニメ" class="buttonE2">
 				</form>
-				<form method="post" action="/send/change-genre/romance" style="display: inline">
-						<input type="submit" value="恋愛" class="buttonE">
+        <form method="post" action="/send/change-genre/35" style="display: inline">
+						<input type="submit" value="コメディー" class="buttonE2">
 				</form>
-				<form method="post" action="/send/change-genre/human" style="display: inline">
-						<input type="submit" value="ヒューマン" class="buttonE">
+				<form method="post" action="/send/change-genre/80" style="display: inline">
+						<input type="submit" value="犯罪" class="buttonE2">
 				</form>
-				<form method="post" action="/send/change-genre/anime" style="display: inline">
-						<input type="submit" value="アニメ" class="buttonE">
+				<form method="post" action="/send/change-genre/99" style="display: inline">
+						<input type="submit" value="ドキュメンタリー" class="buttonE2">
 				</form>
-				<form method="post" action="/send/change-genre/comedy" style="display: inline">
-						<input type="submit" value="コメディー" class="buttonE">
+        <form method="post" action="/send/change-genre/18" style="display: inline">
+            <input type="submit" value="ドラマ" class="buttonE2">
+        </form>
+        <form method="post" action="/send/change-genre/10751" style="display: inline">
+						<input type="submit" value="ファミリー" class="buttonE2">
 				</form>
-				<form method="post" action="/send/change-genre/advenchar" style="display: inline">
-						<input type="submit" value="アドベンチャー" class="buttonE">
+        <form method="post" action="/send/change-genre/14" style="display: inline">
+						<input type="submit" value="ファンタジー" class="buttonE2">
 				</form>
-				<form method="post" action="/send/change-genre/mistery" style="display: inline">
-						<input type="submit" value="ミステリー" class="buttonE">
+        <form method="post" action="/send/change-genre/36" style="display: inline">
+						<input type="submit" value="ヒストリー" class="buttonE2">
+				</form>
+        <form method="post" action="/send/change-genre/27" style="display: inline">
+						<input type="submit" value="ホラー" class="buttonE2">
+				</form>
+        <form method="post" action="/send/change-genre/10402" style="display: inline">
+						<input type="submit" value="ミュージカル" class="buttonE2">
+				</form>
+				<form method="post" action="/send/change-genre/9648" style="display: inline">
+						<input type="submit" value="ミステリー" class="buttonE2">
+				</form>
+        <form method="post" action="/send/change-genre/10749" style="display: inline">
+						<input type="submit" value="恋愛" class="buttonE2">
+				</form>
+        <form method="post" action="/send/change-genre/878" style="display: inline">
+						<input type="submit" value="SF" class="buttonE2">
+				</form>
+        <form method="post" action="/send/change-genre/53" style="display: inline">
+						<input type="submit" value="スリラー" class="buttonE2">
+				</form>
+        <form method="post" action="/send/change-genre/10752" style="display: inline">
+						<input type="submit" value="戦争" class="buttonE2">
+				</form>
+        <form method="post" action="/send/change-genre/37" style="display: inline">
+						<input type="submit" value="洋画" class="buttonE2">
 				</form>
 		</tr></td>
 		</table>
@@ -158,6 +185,9 @@
 		        </form>
 		    </td></tr>
 		    <tr><td>
+            <form method="post" action="/send/cancel/A" style="display: inline">
+                <input type="submit" value="取消" class="buttonD">
+            </form>
 		        <form method="post" action="/send/recommendation-active/A" style="display: inline">
 		            <input type="submit" value="推薦" class="buttonC">
 		        </form>
@@ -204,7 +234,13 @@
 						</form>
 		    </td></tr>
 		    <tr><td>
-						<input type="submit" id='tipsA' value="Tips" class="buttonE">
+            <!-- <input type="submit" id='tipsB' value="Tips" class="buttonE"> -->
+            <form method="post" action="/send/tips-story-correction/B" style="display: inline">
+                <input type="submit" value="あらすじ" class="buttonE">
+            </form>
+            <form method="post" action="/send/tips-info-correction/B" style="display: inline">
+                <input type="submit" value="ミニ情報" class="buttonE">
+            </form>
 						<form method="post" action="/send/review-correction/A" style="display: inline">
 								<input type="submit" value="レビュー" class="buttonE">
 						</form>
@@ -245,6 +281,9 @@
 		        </form>
 		    </td></tr>
 		    <tr><td>
+            <form method="post" action="/send/cancel/B" style="display: inline">
+                <input type="submit" value="取消" class="buttonD">
+            </form>
 		        <form method="post" action="/send/recommendation-active/B" style="display: inline">
 		            <input type="submit" value="推薦" class="buttonC">
 		        </form>
@@ -292,7 +331,13 @@
 
 		    </td></tr>
 		    <tr><td>
-						<input type="submit" id='tipsB' value="Tips" class="buttonE">
+            <!-- <input type="submit" id='tipsB' value="Tips" class="buttonE"> -->
+            <form method="post" action="/send/tips-story-correction/B" style="display: inline">
+								<input type="submit" value="あらすじ" class="buttonE">
+						</form>
+            <form method="post" action="/send/tips-info-correction/B" style="display: inline">
+								<input type="submit" value="ミニ情報" class="buttonE">
+						</form>
 						<form method="post" action="/send/review-correction/B" style="display: inline">
 								<input type="submit" value="レビュー" class="buttonE">
 						</form>
@@ -319,16 +364,16 @@
 			<input type="button"  value="誤り訂正発話B">
 		</right>
 	</div> -->
-	<div class="box7" id='tips_typeA'>
+	<!-- <div class="box7" id='tips_typeA'>
 		<table class="table3" border=2 align="left" >
 		<tr><td>
-        <form method="post" action="/send/tips-overview-correction/A" style="display: inline">
+        <form method="post" action="/send/tips-story-correction/A" style="display: inline">
             <input type="submit" value="あらすじ" class="buttonE" style="font-size:20px;">
-        </form>
-        <form method="post" action="/send/tips-series-correction/A" style="display: inline">
+        </form> -->
+        <!-- <form method="post" action="/send/tips-series-correction/A" style="display: inline">
             <input type="submit" value="シリーズ" class="buttonE" style="font-size:20px;">
-        </form>
-        <form method="post" action="/send/tips-others-correction/A" style="display: inline">
+        </form> -->
+        <!-- <form method="post" action="/send/tips-others-correction/A" style="display: inline">
             <input type="submit" value="その他" class="buttonE" style="font-size:20px;">
         </form>
     </td></tr>
@@ -338,17 +383,17 @@
 	<div class="box8" id='tips_typeB'>
 		<table class="table3" border=2 align="right" >
 		<tr><td>
-        <form method="post" action="/send/tips-overview-correction/B" style="display: inline">
+        <form method="post" action="/send/tips-story-correction/B" style="display: inline">
             <input type="submit" value="あらすじ" class="buttonE" style="font-size:20px;">
-        </form>
-        <form method="post" action="/send/tips-series-correction/B" style="display: inline">
+        </form> -->
+        <!-- <form method="post" action="/send/tips-series-correction/B" style="display: inline">
             <input type="submit" value="シリーズ" class="buttonE" style="font-size:20px;">
-        </form>
-        <form method="post" action="/send/tips-others-correction/B" style="display: inline">
+        </form> -->
+        <!-- <form method="post" action="/send/tips-others-correction/B" style="display: inline">
             <input type="submit" value="その他" class="buttonE" style="font-size:20px;">
         </form>
     </td></tr>
 		</table>
-	</div>
+	</div> -->
 
 {% endblock %}
