--- a/Server/static/css/client.css
+++ b/Server/static/css/client.css
@@ -18,8 +18,10 @@
 }
 
 .buttonA {
-    width:110px;
-    height:90px;
+    /* width:110px;
+    height:90px; */
+    width:100px;
+    height:70px;
     /*width:260px
     height:100px*/
     font-size: 2.0em;
@@ -47,8 +49,10 @@
 }
 
 .buttonC {
-    width:120px;
-    height:90px;
+    /* width:120px;
+    height:90px; */
+    width:100px;
+    height:70px;
     font-size: 2.0em;
     font-weight: bold;
 	background-color: #8a2be2;
@@ -63,8 +67,10 @@
 }
 
 .buttonD {
-    width:120px;
-    height:90px;
+    /* width:120px;
+    height:90px; */
+    width:100px;
+    height:70px;
     font-size: 2.0em;
     font-weight: bold;
 	background-color: #d2691e;
@@ -78,8 +84,27 @@
 }
 
 .buttonE {
+    /* width:120px;
+    height:90px; */
+    width:100px;
+    height:70px;
+    font-size: 2.0em;
+    font-weight: bold;
+	background-color: #B13029;
+	color: #fff;
+  border-bottom: solid 6px #800000;
+  border-right: solid 6px #800000;/*ボタン色より暗めに*/
+  border-radius: 1.5px;
+}
+.buttonE:hover {
+	background-color: #ff0000;
+}
+
+.buttonE2 {
+    /* width:120px;
+    height:90px; */
     width:120px;
-    height:90px;
+    height:70px;
     font-size: 2.0em;
     font-weight: bold;
 	background-color: #B13029;
@@ -93,8 +118,10 @@
 }
 
 .buttonF {
-    width:120px;
-    height:90px;
+    /* width:120px;
+    height:90px; */
+    width:100px;
+    height:70px;
     font-size: 2.0em;
     font-weight: bold;
 	background-color: #8a2be2;
