--- a/Server/templates/index.html
+++ b/Server/templates/index.html
@@ -210,6 +210,7 @@
 		        </form>
 						<form method="post" action="/send/unknown-correction/A" style="display: inline">
 								<input type="submit" value="不明" class="buttonE">
+            </form>
 						<form method="post" action="/send/repeat-correction/A" style="display: inline">
 								<input type="submit" value="繰り返し" class="buttonE">
 						</form>
