--- a/Server/templates/index.html
+++ b/Server/templates/index.html
@@ -26,20 +26,20 @@
     </td></tr> -->
 		<tr><td>
 			{% if message %}
-					<form method="post" action="/send/change_topic-meta/{{ message.topics[0] }}" style="display: inline;">
-							<input type="submit" value="{{ message.topics[0] }}" class="buttonB">
+					<form method="post" action="/send/change_topic-meta/{{ message.movie_list[0]['movie_id'] }}" style="display: inline;">
+							<input type="submit" value="{{ message.movie_list[0]['title'] }}" class="buttonB">
 					</form>
-					<form method="post" action="/send/change_topic-meta/{{ message.topics[1] }}" style="display: inline">
-							<input type="submit" value="{{ message.topics[1] }}" class="buttonB">
+					<form method="post" action="/send/change_topic-meta/{{ message.movie_list[1]['movie_id'] }}" style="display: inline">
+							<input type="submit" value="{{ message.movie_list[1]['title'] }}" class="buttonB">
 					</form>
-					<form method="post" action="/send/change_topic-meta/{{ message.topics[2] }}" style="display: inline">
-							<input type="submit" value="{{ message.topics[2] }}" class="buttonB">
+					<form method="post" action="/send/change_topic-meta/{{ message.movie_list[2]['movie_id'] }}" style="display: inline">
+							<input type="submit" value="{{ message.movie_list[2]['title'] }}" class="buttonB">
 					</form>
-					<form method="post" action="/send/change_topic-meta/{{ message.topics[3] }}" style="display: inline">
-							<input type="submit" value="{{ message.topics[3] }}" class="buttonB">
+					<form method="post" action="/send/change_topic-meta/{{ message.movie_list[3]['movie_id'] }}" style="display: inline">
+							<input type="submit" value="{{ message.movie_list[3]['title'] }}" class="buttonB">
 					</form>
-					<form method="post" action="/send/change_topic-meta/{{ message.topics[4] }}" style="display: inline">
-							<input type="submit" value="{{ message.topics[4] }}" class="buttonB">
+					<form method="post" action="/send/change_topic-meta/{{ message.movie_list[4]['movie_id'] }}" style="display: inline">
+							<input type="submit" value="{{ message.movie_list[4]['title'] }}" class="buttonB">
 					</form>
 					<form method="post" action="/send/change_person-meta/{{ message.person[0] }}" style="display: inline">
 							<input type="submit" value="{{ message.person[0] }}" class="buttonB">
@@ -56,12 +56,6 @@
 					<form method="post" action="/send/change_person-meta/{{ message.person[4] }}" style="display: inline">
 							<input type="submit" value="{{ message.person[4] }}" class="buttonB">
 					</form>
-					<!-- <form method="post" action="/send/change_topic-meta/{{ message.topics[10] }}" style="display: inline">
-							<input type="submit" value={{ message.topics[10] }} class="buttonB">
-					</form>
-					<form method="post" action="/send/change_topic-meta/{{ message.topics[11] }}" style="display: inline">
-							<input type="submit" value={{ message.topics[11] }} class="buttonB">
-					</form> -->
 			{% else %}
 					<form method="post" action="/send/change_topic-meta/topic1" style="display: inline">
 							<input type="submit" value="None" class="buttonB">
@@ -93,11 +87,6 @@
 					<form method="post" action="/send/change_topic-meta/topic10" style="display: inline">
 							<input type="submit" value="None" class="buttonB">
 					</form>
-					<!-- <form method="post" action="/send/change_topic-meta/topic11" style="display: inline">
-							<input type="submit" value="None" class="buttonB">
-					</form>
-					<form method="post" action="/send/change_topic-meta/topic12" style="display: inline">
-							<input type="submit" value="None" class="buttonB"> -->
 					</form>
 			{% endif %}
 	</tr></td>
