表示更新ボタンを追加

--- a/Server/templates/index.html
+++ b/Server/templates/index.html
@@ -8,6 +8,11 @@
 	<div class="box2">
 		<table class="table2" border=0 align="center">
 		<tr>
+			<td width="300px" align="left">
+			<form method="get" action="/" style="display: inline">
+				<input type="submit" value="表示更新" class="buttonM">
+			</form>
+			</td>
 			<td style="font-size: 20px;">
 				対話ID: {{ dialog_id }}
 			</td>
